--- a/src/Blog/Globalization/Resource.fa.resx
+++ b/src/Blog/Globalization/Resource.fa.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="LanguageEnglish" xml:space="preserve">
+    <value>انگلیسی</value>
+  </data>
+  <data name="LanguageFarsi" xml:space="preserve">
+    <value>فارسی</value>
+  </data>
   <data name="NavbarAbout" xml:space="preserve">
     <value>درباره</value>
   </data>
